fix: fix width of the input not fitting properly

--- a/app.css
+++ b/app.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
 :root {
     --bg: rgb(17, 17, 17);
     --text: rgb(241, 241, 241);
@@ -10,9 +15,10 @@ html {
     background-color: var(--bg);
     color: var(--text);
     font-family: var(--font);
+    font-size: 20px;
 }
 
-.wrapper {
+div.wrapper {
     margin-left: auto;
     margin-right: auto;
     max-width: 1280px;
@@ -20,23 +26,27 @@ html {
     padding-right: 32px;
 }
 
-input[type="range"][orient="vertical"] {
+div.sliders {
+    width: 192px;
+}
+
+input[type="range"] {
     -webkit-appearance: none;
     appearance: none;
 
     background: transparent;
 
     cursor: pointer;
-    width: 20%;
+    width: 100%;
 }
-input[type="range"][orient="vertical"]::-webkit-slider-runnable-track {
+input[type="range"]::-webkit-slider-runnable-track {
     background-image: linear-gradient(90deg, rgb(255, 0, 0), rgb(0, 0, 0));
 
     height: 4px;
     border-radius: 100px;
     margin: 0 4px;
 }
-input[type="range"][orient="vertical"]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
 
